# inspekku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
collector/: CMakeLists.txt
collector/src/: main.cpp  memory.h
server/: app.py  requirements.txt
src/: main.cpp  memory_test.cpp  periodic_task.h
ui/: package.json
ui/src/: App.jsx
